[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = "0.2"
ckb-testtool = "0.2"
hex = "0.4.2"
das-bloom-filter = { path = "../libs/das-bloom-filter", features = ["std"] }
rand = "0.8.3"
